Add sources and connections

--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,9 @@
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
 }
+
+.sqlOutput {
+  width: 100%;
+  overflow-x: auto;
+  white-space: nowrap;
+}
