--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,24 @@
   overflow-x: auto;
   white-space: nowrap;
 }
+
+pre {
+  outline: 1px solid #ccc;
+  padding: 5px;
+  margin: 15px;
+}
+.string {
+  color: green;
+}
+.number {
+  color: darkorange;
+}
+.boolean {
+  color: blue;
+}
+.null {
+  color: magenta;
+}
+.key {
+  color: red;
+}
